# Algorithmique-des-groupes-

./: .gitignore  README.md  TODO  decomposition.html  dune  index.html  kronecker_decomposition.ml  main.ml  rang.html  style.css
Ocaml/: TIPE JEAN ALGO EFFICACE (2) (1).ml  TODO  dune  loi_diedral.ml  loi_gp_ab.ml  loi_gp_ab_new.ml  nb_gen.ml  nb_gen_mt.ml  permutation.ml  représentation groupe abélien fini.ml  représentation permutation TIPE.ml  tests.ml
lib_gen/: decomposition_et_rang.ml  dune  graph_gen.ml  kronecker_decomposition.ml  loi_diedral.ml  loi_gp_ab.ml  loi_star.ml  nb_gen.ml  nb_gen_draw.ml  new_nb_gen.ml  ordre&exposant.ml  ordre_exposant.ml  permutation.ml  tests.ml
ocaml/: loi_diedral.ml  nb_gen.ml
