(executables
  (names main)
  (libraries js_of_ocaml js_of_ocaml-lwt lib_gen)
  (modes byte)
  (preprocess (pps js_of_ocaml-ppx)))

(rule
  (targets main.js)
  (action
    (run %{bin:js_of_ocaml}
         --source-map
         --disable genprim
         +base\runtime.js 
         +nat.js
         %{dep:main.bc} 
         -o %{targets} 
         --pretty)))

(alias
  (name default)
  (deps main.js index.html style.css))